--- a/sach.html
+++ b/sach.html
@@ -113,7 +113,11 @@
                             <span id="tac-gia-title">Tác giả:</span>
                             <span id="tac-gia-name">tần mộng hiên</span>
                         </div>
-                        <div id="sach-box-lien-he">Liên hệ</div>
+                        <div id="book-price">
+                            <div id="sale-price">118.150₫</div>
+                            <div id="real-price">139.000₫</div>
+                            <div id="sale">-15%</div>
+                        </div>
                         <div id="sach-box-right-san">
                             <p>Mua sách trên sàn TMĐT</p>
                             <a href=""><img src="/images/icon/shopee-icon.webp" alt=""></a>
