--- a/sach.html
+++ b/sach.html
@@ -118,6 +118,18 @@
                             <div id="real-price">139.000₫</div>
                             <div id="sale">-15%</div>
                         </div>
+                        <div id="amount-content">
+                            <div id="amount-box">
+                                <button class="btn-amount"><i class="ri-subtract-line"></i></button>
+                                <div id="amount-buy">1</div>
+                                <button class="btn-amount"><i class="ri-add-line"></i></button>
+                            </div>
+                            <div id="amount">Còn lại 200 trong kho</div>
+                        </div>
+                        <div id="buy-content">
+                            <button class="btn-buy" id="btn-cart">Thêm vào giở hàng</button>
+                            <a href="thanh-toan.html"><button class="btn-buy" id="btn-buy">Mua ngay</button></a>
+                        </div>
                         <div id="sach-box-right-san">
                             <p>Mua sách trên sàn TMĐT</p>
                             <a href=""><img src="/images/icon/shopee-icon.webp" alt=""></a>
