--- a/tac-gia.html
+++ b/tac-gia.html
@@ -103,9 +103,9 @@
                 <p id="now"> Tác giả</p>
             </div>
         </div>
-        <div id="tac-gia-title">
-            <p style="font-size: 28px;">Tác giả</p>
-            <p style="padding-right: 170px; font-size: 20px;">Danh mục tin</p>
+        <div id="title">
+            <div id="title-tac-gia"><p style="font-size: 28px;">Tác giả</p></div>
+            <div id="title-tin"><p>DANH MỤC TIN</p></div>
         </div>
         <div id="box-content">
             <div id="tac-gia-content">
@@ -205,8 +205,6 @@
                         Kolya Bùi
                     </div>
                 </div>
-
-
             </div>
             <div id="tin-content">
                 <div class="tins" id="tins-border">
@@ -244,12 +242,19 @@
                         <div id="tins-content-date">Thứ Ba, 06/05/2025</div>
                     </div>
                 </div>
-
-
             </div>
         </div>
-
-
+        <div id="pages">
+                    <div id="pages-content">
+                        <i class="ri-arrow-left-s-line"><a href=""></a></i>
+                        <p class="page" id="page-now"><a href="">1</a></p>
+                        <p class="page"><a href="">2</a></p>
+                        <p class="page"><a href="">3</a></p>
+                        <p class="page"><a href="">...</a></p>
+                        <p class="page"><a href="">50</a></p>
+                        <i class="ri-arrow-right-s-line"><a href=""></a></i>
+                    </div>
+            </div>
     </main>
     <footer>
         <div id="footer-content-one">
