--- a/danh-sach.html
+++ b/danh-sach.html
@@ -10,13 +10,52 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/danh-sach/danh-sach.css" />
+    <link rel="stylesheet" href="css/nav-bar.css" />
   </head>
-
   <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+      <div class="nav-container">
+        <a href="#" class="nav-logo">
+          <i class="ri-book-3-line"></i>
+          Nhã Nam
+        </a>
+
+        <ul class="nav-menu" id="navMenu">
+          <li class="nav-item">
+            <a href="danh-sach.html" class="nav-link active">
+              <i class="ri-book-line"></i>
+              Quản lý Sách
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="them-sach.html" class="nav-link">
+              <i class="ri-add-circle-line"></i>
+              Thêm Sách
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="tai-khoan.html" class="nav-link">
+              <i class="ri-user-settings-line"></i>
+              Quản lý Tài khoản
+            </a>
+          </li>
+        </ul>
+
+        <a href="index.html" class="nav-logout" >
+          <i class="ri-logout-box-line"></i>
+          Thoát
+        </a>
+
+        <button class="mobile-menu-btn" id="mobileMenuBtn">
+          <i class="ri-menu-line"></i>
+        </button>
+      </div>
+    </nav>
     <main>
-      <div class="container">
+      <div class="containerzz">
         <div class="header">
-          <h1>Quản lý Sách</h1>
+          <h1 style="color: green">Quản lý Sách</h1>
           <div class="header-actions">
             <button class="btn btn-success">+ Tạo sách mới</button>
             <button class="btn btn-primary">Xuất Excel</button>
